crates/etas_tests/fixtures/compiler/projects/positive/std_substrate_source/src/app/substrate/model.es
module app.substrate.model;

public type SubstrateReport = {
    name: string,
    count: i32,
};

public flow build_report() -> SubstrateReport ![]
{
    return SubstrateReport { name = "std_substrate", count = 4 };
}
