crates/etas_tests/fixtures/compiler/projects/negative/dependency_alias_nominal_types/src/app/model.es
module app.model;

public flow project_path() -> string
{
    return "/workspace/project";
}

public flow fallback_status() -> i32
{
    return 0;
}
